samples/_failures_safe/1761709068_eb46a7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cf4f228a.c: In function ‘tokenize_and_parse’:
./samples/SAFE/__tmp_cf4f228a.c:176:16: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  176 |         struct Token token
      |                ^~~~~
./samples/SAFE/__tmp_cf4f228a.c:176:16: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cf4f228a.c:176:16: error: expected declaration or statement at end of input
